test/invalid/syntactic/missing_semicolon.sysml
// INVALID: Missing semicolon after usage
// EXPECTED: Parse error
package Test {
    part def Foo { }
    part x : Foo
}
